# anglecalibration

./: .clang-tidy  CMakeLists.txt  README.md  acquire_flatfield_data.py  modify_parameters.py  pyproject.toml
.github/workflows/: build_docs.yml
cmake/: project-config.cmake.in
docs/: CMakeLists.txt  DoxyFile.in  conf.py  conf.py.in
docs/src/: AngleCalibration.rst  FlatField.rst  MythenDetectorSpecifications.rst  MythenFileReader.rst  Parameters.rst  PlotHelper.rst  SimpleFileInterface.rst  cppapi.rst  index.rst  installation.rst  pyAngleCalibration.rst  pyFlatField.rst  pyMythenDetectorSpecifications.rst  pyMythenFileReader.rst  pyParameters.rst  pyPlotHelper.rst  pythonapi.rst  theory.rst
docs/src/cppapi/: file_conf.py.rst  file_view_hierarchy.rst.include  namespace_conf.rst  program_listing_file_conf.py.rst  unabridged_api.rst.include  unabridged_orphan.rst  variable_namespaceconf_1a160404b83fa0b5b708e09a9d1e52f294.rst  variable_namespaceconf_1a33fa97cf51dcb25970fbf53f10159589.rst  variable_namespaceconf_1a45653c983098153b78e33600e39230eb.rst  variable_namespaceconf_1a637c239d256432248aa8d9f3ab0b8c52.rst  variable_namespaceconf_1a6c3bfcc1a44546c1c75ce20f55bd0fd6.rst  variable_namespaceconf_1a6eba2d2c7ae923054b1c49e686ec89b9.rst  variable_namespaceconf_1a6fcd7e5236f355b1e1a55f9d95988810.rst  variable_namespaceconf_1ade15c5b54093b64d7c428ec19ca5b1cb.rst  variable_namespaceconf_1ae475e080536acb271a0a0efe56c3ba42.rst  variable_namespaceconf_1af6ab851520fbe9cd6419a423cf8efd7b.rst
docs/static/: extr.css
etc/: dev-env.yml
examples/: CMakeLists.txt  additional_plots.hpp  example_calibration.cpp  example_conversion.cpp  utils.hpp
include/: AngleCalibration.hpp  CustomFiles.hpp  FlatField.hpp  Hdf5FileReader.hpp  MythenDetectorSpecifications.hpp  MythenFileReader.hpp  Optimization.hpp  Parameters.hpp  PlotHelper.hpp  logger.hpp  utils.hpp
include/aare/: AngleCalibration.hpp  CustomFiles.hpp  FlatField.hpp  Hdf5FileReader.hpp  MythenDetectorSpecifications.hpp  MythenFileReader.hpp
include/helpers/: ErrorPropagation.hpp  FileInterface.hpp  Hdf5FileReader.hpp  LogFiles.hpp  custom_errors.hpp
plotting/: CMakeLists.txt
plotting/include/: PlotCalibrationProcess.hpp  PlotHelpers.hpp
plotting/src/: PlotCalibrationProcess.cpp  PlotHelpers.cpp
plotting_scripts/: CMakeLists.txt  PlotHelpers.hpp  plot_base_peak_in_strips.py  plot_histogram.hpp
python/: CMakeLists.txt
python/angcal/: PlotHelper.py  __init__.py  utils.py
python/examples/: calibration.ipynb  calibration.py  conversion.ipynb  conversion.py  flatfieldcalibration.py
python/src/: bind_AngleCalibration.hpp  bind_FlatField.hpp  bind_MythenDetectorSpecifications.hpp  bind_MythenFileReader.hpp  bind_Parameters.hpp  bind_SimpleFileInterface.hpp  module.cpp  np_helpers.hpp
python/tests/: conftest.py  test_rate_correction.py
src/: AngleCalibration.cpp  AngleCalibration.test.cpp  CustomFiles.cpp  FlatField.cpp  Hdf5FileReader.test.cpp  MythenFileReader.test.cpp  Parameters.cpp  PlotHelper.cpp
tests/: CMakeLists.txt  test_config.hpp.in
