[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = '^(?P<version>\d+(?:\.\d+)*(?:[\.\+\w]+)?)$'
result = "{version}" 

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11", "numpy", "matplotlib",] # hdf5 
build-backend = "scikit_build_core.build"

[project]
name = "angcal"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
] # is aare a dependency? 


[tool.cibuildwheel.linux]
build = "cp{312,313,314}-manylinux_x86_64"

[tool.cibuildwheel.macos]
build = "cp{312,313,314}-macosx_*"
archs = ["arm64"]


[tool.scikit-build]
build.verbose = true
cmake.build-type = "Release"
install.components = ["python"]

[tool.scikit-build.cmake.define]
ANGCAL_PYTHON_BINDINGS = "ON"
ANGCAL_INSTALL_PYTHONEXT = "ON"


